--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="style.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./Sass_filen/output.css">
 </head>
 <body>
 
@@ -25,7 +24,7 @@
                 earum.
             </p>
             <figure>
-                <img class="card-img" src="" alt="en bild på thaimat">
+                <img class="card-img" src="./Bilder/dekoration.jpg" alt="en bild på thaimat">
                 <figcaption> Mamma </figcaption>
             </figure>
     
