--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-
-    <link rel="stylesheet" href="./Sass_filen/output.css">
+    <!--link rel="stylesheet" href="./Sass_filen/output.css"-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -24,8 +24,8 @@
                 earum.
             </p>
             <figure>
-                <img class="card-img" src="./Bilder/dekoration.jpg" alt="en bild på thaimat">
-                <figcaption> Mamma </figcaption>
+                <img class="card-img" src="./Bilder/julgran.jpg" alt="en bild på thaimat">
+                <figcaption> från 150 kr </figcaption>
             </figure>
     
             <button>Köp</button>
@@ -83,8 +83,8 @@
                 earum.
             </p>
             <figure>
-                <img class="card-img" src="Bilder/Kamie.jpg" alt="en bild på thaimat">
-                <figcaption> Lillasyster </figcaption>
+                <img class="card-img" src="Bilder/dekoration.jpg" alt="en bild på thaimat">
+                <figcaption> 100 kr </figcaption>
             </figure>
     
             <button>Köp</button>
