--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <script src="main.js" defer></script>
 </head>
 <body>
@@ -97,8 +98,34 @@
             <button>Köp</button>
 
         </article>
-    
-        
         </section>
+    <main/>
+
+    <footer id="footer">
+        <section class="footer-address">
+            <div class="address"><i class="fas fa-building"></i> Numero Uno </div>
+            <div class="address"><i class="fas fa-envelope"></i> numero.uno@gmail.com </div>
+            <div class="address"><i class="fas fa-map-marker-alt"></i> Nummervägen 1, Stockholm</div>
+        </section>
+
+            <section class="footer-social">
+                <div class="social"> </i> <a href="#"> <i class="fab fa-facebook-square"></i></a></div>
+                <div class="social"> </i> <a href="#"> <i class="fab fa-instagram"></i></a></div>
+                <div class="social">  </i> <a href="#"><i class="fab fa-twitter"></i></a></div>
+            </section>
+
+            <!-- <section class="footer-a">
+                <ul> 
+                <li class="footer-a-li"> <a href="#"> Home </a> </li>
+                <li class="footer-a-li"> <a href="#"> Product</a> </li>
+                <li class="footer-a-li"> <a href="#"> About </a> </li>
+                <li class="footer-a-li"> <a href="#"> Contact </a> </li>
+                </ul>
+            </section> -->
+    </footer>
+
+    <div class="footer-bottom">
+        &copy; numerouno.se | Designed by Number Uno
+    </div>
 </body>
 </html>
