Created a style for the navbar - Sandra

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Här börjar header -->
 <header>
     <div class="overlay"></div>
-    <nav>
+    <nav class="nav-bar">
         <h2>SHOP</h2>
         <ul>
             <li> <a href="#">Home</a></li>
