trying to change the styling of header - sandra

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <nav class="nav-bar">
         <h2>SHOP</h2>
         <ul>
-            <li> <a href="#">Home</a></li>
-            <li> <a href="#">About</a></li>
+            <li> <a href="#">HOME</a></li>
+            <li> <a href="#">ABOUT</a></li>
             <li class="cart">
                 <a href="#"> 
-                <i class="fas fa-shopping-basket"></i>Cart<span>0</span>
+                <i class="fas fa-shopping-basket"></i> CART <span>0</span>
                 
                </a>       
             </li>
