Added cart.html and linked it

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li> <a href="#">HOME</a></li>
             <li> <a href="#">ABOUT</a></li>
             <li class="cart">
-                <a href="#"> 
+                <a href="cart.html"> 
                 <i class="fas fa-shopping-basket"></i> CART <span>0</span>
                 
                </a>       
