--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <!-- Här börjar header -->
 <header>
     <div class="overlay"></div>
-    <nav class="nav-bar">
+    <nav>
         <h2>SHOP</h2>
-        <ul>
-            <li> <a href="#">HOME</a></li>
+        <ul id="nav-bar">
+            <li class="active"> <a href="#">HOME</a></li>
             <li> <a href="#">ABOUT</a></li>
-            <li class="cart">
+            <li style="float:right" class="cart">
                 <a href="cart.html"> 
                 <i class="fas fa-shopping-basket"></i> CART <span>0</span>
                 
