Centered the navbar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header>
     <div class="overlay"></div>
     <nav>
-        <h2>SHOP</h2>
+        <h2>Christmasdecor.se</h2>
         <ul id="nav-bar">
             <li class="active"> <a href="#">HOME</a></li>
             <li> <a href="#">ABOUT</a></li>
