--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <header>
     <div class="overlay"></div>
     <nav>
-        <h2>Christmasdecor.se</h2>
+        <h2>Julpynt.se</h2>
         <ul id="nav-bar">
-            <li class="active"> <a href="#">HOME</a></li>
-            <li> <a href="#">ABOUT</a></li>
+            <li class="active"> <a href="#">HEM</a></li>
+            <li> <a href="#">OM OSS</a></li>
             <li style="float:right" class="cart">
                 <a href="cart.html"> 
-                <i class="fas fa-shopping-basket"></i> CART <span>0</span>
+                <i class="fas fa-shopping-basket"></i> VARUKORG <span>0</span>
                 
                </a>       
             </li>
