ändrade i navbaren, pixelfix-S

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
         <p class="card-p">
                 Vackra nötknäppare tillverkad i trä, en fin juldekoration som passar fint i alla rum. Finns i olika storlekar.
         </p>   
-        <h1 class="pris">100kr</h1>   
+        <h2 class="pris">100kr</h2>   
             <button class="buy-btn">Köp</button>
 
         </article>
         </section>
-    <main/>
+    </main>
 <!-- Footer -->
     <footer id="footer">
         <section class="footer-address">
