uppdaterade index, med uppdaterad navbar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Hem</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
    
@@ -17,15 +17,14 @@
 
     <!-- Här börjar header -->
 <header>
-    <div class="overlay"></div>
     <nav>
         <h1>Julpynt.se</h1>
         <ul id="nav-bar">
-            <li class="active"> <a href="#">HEM</a></li>
-            <li> <a href="#">OM OSS</a></li>
-            <li style="float:right" class="cart">
+            <li class="active"> <a href="index.html">HEM</a></li>
+            <li> <a href="omoss.html">OM OSS</a></li>
+            <li style="float:right">
                 <a href="cart.html"> 
-                <i class="fas fa-shopping-basket"></i> VARUKORG <span>0</span>
+                <i class="fas fa-shopping-basket"></i> VARUKORG  <span>( 0 )</span>
                 
                </a>       
             </li>
