--- a/index.html
+++ b/index.html
@@ -101,31 +101,41 @@
         </section>
     <main/>
 
-    <footer id="footer">
-        <section class="footer-address">
-            <div class="address"><i class="fas fa-building"></i> Numero Uno </div>
-            <div class="address"><i class="fas fa-envelope"></i> numero.uno@gmail.com </div>
-            <div class="address"><i class="fas fa-map-marker-alt"></i> Nummervägen 1, Stockholm</div>
-        </section>
-
-            <section class="footer-social">
-                <div class="social"> </i> <a href="#"> <i class="fab fa-facebook-square"></i></a></div>
-                <div class="social"> </i> <a href="#"> <i class="fab fa-instagram"></i></a></div>
-                <div class="social">  </i> <a href="#"><i class="fab fa-twitter"></i></a></div>
-            </section>
-
-            <!-- <section class="footer-a">
-                <ul> 
-                <li class="footer-a-li"> <a href="#"> Home </a> </li>
-                <li class="footer-a-li"> <a href="#"> Product</a> </li>
-                <li class="footer-a-li"> <a href="#"> About </a> </li>
-                <li class="footer-a-li"> <a href="#"> Contact </a> </li>
-                </ul>
-            </section> -->
+    <footer>
+        <div class="design">
+            <div class="content">
+                <section>
+                    <header>Företag</header>
+                    <a href="#">Hem</a>
+                    <a href="#">Om oss</a>
+                    <a href="#">Kontakt</a>
+                    <a href="#">Produkter</a>
+                </section>
+                <section>
+                    <header>Populära Produkter</header>
+                    <a href="#">Julgran</a>
+                    <a href="#">Julstjärna</a>
+                    <a href="#">Julstjärna</a>
+                    <a href="#">Juldekoration</a>
+                </section>
+                <section class="nyhetsbrev">
+                    <header>Nyhetsbrev och Rabatter</header>
+                    <form action="">
+                        <input id="email" type="email" placeholder="emailadress@se" id="">
+                        <input id="medlem" type="submit" value="Prenumerera">
+                    </form>
+                <div class="social">
+                     <i class="fab fa-facebook-square"></i>
+                     <i class="fab fa-instagram"></i>
+                     <i class="fab fa-youtube"></i>
+                     <i class="fab fa-twitter"></i>
+                </div>   
+                </section>
+            </div>
+                <div class="notice">
+                    &copy; numerouno.se | Designed by <strong>Numero Uno</strong> 
+                </div>
+                </div>
     </footer>
-
-    <div class="footer-bottom">
-        &copy; numerouno.se | Designed by Number Uno
-    </div>
 </body>
 </html>
