--- a/index.html
+++ b/index.html
@@ -1,123 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hem</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-   
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css">
-    <script src="main.js" defer></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <script src="main.js" defer></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!-- Här börjar header -->
-<header>
-    <nav>
+    <header>
+      <nav>
         <h1>Julpynt.se</h1>
         <ul id="nav-bar">
-            <li class="active"> <a href="index.html">HEM</a></li>
-            <li> <a href="omoss.html">OM OSS</a></li>
-            <li style="float:right">
-                <a href="cart.html"> 
-                <i class="fas fa-shopping-basket"></i> VARUKORG  <span>( 0 )</span>
-                
-               </a>       
-            </li>
+          <li class="active"><a href="index.html">HEM</a></li>
+          <li><a href="omoss.html">OM OSS</a></li>
+          <li style="float: right">
+            <a href="cart.html">
+              <i class="fas fa-shopping-basket"></i> VARUKORG <span>( 0 )</span>
+            </a>
+          </li>
         </ul>
-    </nav>
-</header>
+      </nav>
+    </header>
 
-<!-- Här Börjar Card -->
-<!-- Card 1 -->
-<section class="card">
-    <article class="container-item" id="item1">
-        <img class="card-img" src="./Bilder/julgran.jpg" alt="Julgran bild">
-        <h2 class="title"> Julgran </h2>
-        <p class="card-p">
-                Granen är ett måste inom juldekoration! Den är en av de mest kända och populära träds-sorterna. Välj mellan olika storlekar och pynta sedan efter egen smak!
-        </p>
-        <h2 class="pris"> från 150 kr </pris>
-            </figure>
-    
-            <button class="buy-btn">Köp</button>
-        </article>
-<!-- Card 2 -->  
-    <article class="container-item" id="item2">
-        <img class="card-img" src="Bilder/star.jpg" alt="Julstjärna bild">
-        <h2 class="title">Julstjärna</h2>
-        <p class="card-p">
-                En fantastisk vacker julstärna. Hängande pappstjärna i grå/vitt mönster. Stor modell med en diameter på 75cm.
-        </p>
-        <h2 class="pris">50kr</h2>
-        <button class="buy-btn">Köp</button>
-    </article>
-<!-- Card 3 -->
-    <article class="container-item" id="item3">
-        <img class="card-img" src="Bilder/julkrans.jpg" alt="bild på julig julkrans">
-        <h2 class="title">Julkrans</h2>
-        <p class="card-p">
-                En magisk julkrans som välkomnar alla dina gäster vid dörren!<br/>
-                Grön krans med fina juliga detaljer såsom löv, bär och kulor.
-                Jättefin dekoration att placera på dörren eller på väggen inomhus.
-            </p>
-            <h2 class="pris">99kr</h2>
-            <button class="buy-btn">Köp</button>
-
-        </article>
-<!-- Card 4 -->
-    <article class="container-item" id="item4">
-        <img class="card-img" src="Bilder/dekoration.jpg" alt="en bild på thaimat">
-        <h2 class="title">Juldekoration</h2>
-        <p class="card-p">
-                Vackra nötknäppare tillverkad i trä, en fin juldekoration som passar fint i alla rum. Finns i olika storlekar.
-        </p>   
-        <h2 class="pris">100kr</h2>   
-            <button class="buy-btn">Köp</button>
-
-        </article>
-        </section>
-    <main/>
+    <!-- Här Börjar Card -->
+    <!-- Card 1 -->
+    <section class="card">
+      <article class="container-item" id="item1">
+        <div>
+          <img class="card-img" src="./Bilder/julgran.jpg" alt="Julgran bild" />
+        </div>
+        <div><h2 class="title">Julgran</h2></div>
+        <div>
+          <p class="card-p">
+            Granen är ett måste inom juldekoration! Den är en av de mest kända
+            och populära träds-sorterna. Välj mellan olika storlekar och pynta
+            sedan efter egen smak!
+          </p>
+        </div>
+        <div>
+          <h2 class="pris">150 kr</h2>
+        </div>
+        <div>
+          <button class="buy-btn">Köp</button>
+        </div>
+      </article>
+      <!-- Card 2 -->
+      <article class="container-item" id="item2">
+        <div>
+          <img class="card-img" src="Bilder/star.jpg" alt="Julstjärna bild" />
+        </div>
+        <div>
+          <h2 class="title">Julstjärna</h2>
+        </div>
+        <div>
+          <p class="card-p">
+            En fantastisk vacker julstärna. Hängande pappstjärna i grå/vitt
+            mönster. Stor modell med en diameter på 75cm.
+          </p>
+        </div>
+        <div>
+          <h2 class="pris">50kr</h2>
+        </div>
+        <div>
+          <button class="buy-btn">Köp</button>
+        </div>
+      </article>
+      <!-- Card 3 -->
+      <article class="container-item" id="item3">
+        <div>
+          <img
+            class="card-img"
+            src="Bilder/julkrans.jpg"
+            alt="bild på julig julkrans"
+          />
+        </div>
+        <div>
+          <h2 class="title">Julkrans</h2>
+        </div>
+        <div>
+          <p class="card-p">
+            En magisk julkrans som välkomnar alla dina gäster vid dörren!<br />
+            Grön krans med fina juliga detaljer såsom löv, bär och kulor.
+            Jättefin dekoration att placera på dörren eller på väggen inomhus.
+          </p>
+        </div>
+        <div>
+          <h2 class="pris">99kr</h2>
+        </div>
+        <div>
+          <button class="buy-btn">Köp</button>
+        </div>
+      </article>
+      <!-- Card 4 -->
+      <article class="container-item" id="item4">
+        <div>
+          <img
+            class="card-img"
+            src="Bilder/dekoration.jpg"
+            alt="en bild på thaimat"
+          />
+        </div>
+        <div><h2 class="title">Juldekoration</h2></div>
+        <div>
+          <p class="card-p">
+            Vackra nötknäppare tillverkad i trä, en fin juldekoration som passar
+            fint i alla rum. Finns i olika storlekar.
+          </p>
+        </div>
+        <div>
+          <h2 class="pris">100kr</h2>
+        </div>
+        <div>
+          <button class="buy-btn">Köp</button>
+        </div>
+      </article>
+    </section>
+    <main />
 
     <footer>
-        <div class="design">
-            <div class="content">
-                <section>
-                    <header>Företag</header>
-                    <a href="#">Hem</a>
-                    <a href="#">Om oss</a>
-                    <a href="#">Kontakt</a>
-                    <a href="#">Produkter</a>
-                </section>
-                <section>
-                    <header>Populära Produkter</header>
-                    <a href="#">Julgran</a>
-                    <a href="#">Julstjärna</a>
-                    <a href="#">Julkrans</a>
-                    <a href="#">Juldekoration</a>
-                </section>
-                <section class="nyhetsbrev">
-                    <header>Nyhetsbrev och Rabatter</header>
-                    <form action="">
-                        <input id="email" type="email" placeholder="emailadress@se" id="">
-                        <input id="medlem" type="submit" value="Prenumerera">
-                    </form>
-                <div class="social">
-                     <i class="fab fa-facebook-square"></i>
-                     <i class="fab fa-instagram"></i>
-                     <i class="fab fa-youtube"></i>
-                     <i class="fab fa-twitter"></i>
-                </div>   
-                </section>
+      <div class="design">
+        <div class="content">
+          <section>
+            <header>Företag</header>
+            <a href="#">Hem</a>
+            <a href="#">Om oss</a>
+            <a href="#">Kontakt</a>
+            <a href="#">Produkter</a>
+          </section>
+          <section>
+            <header>Populära Produkter</header>
+            <a href="#">Julgran</a>
+            <a href="#">Julstjärna</a>
+            <a href="#">Julkrans</a>
+            <a href="#">Juldekoration</a>
+          </section>
+          <section class="nyhetsbrev">
+            <header>Nyhetsbrev och Rabatter</header>
+            <form action="">
+              <input
+                id="email"
+                type="email"
+                placeholder="emailadress@se"
+                id=""
+              />
+              <input id="medlem" type="submit" value="Prenumerera" />
+            </form>
+            <div class="social">
+              <i class="fab fa-facebook-square"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-youtube"></i>
+              <i class="fab fa-twitter"></i>
             </div>
-                <div class="notice">
-                    &copy; numerouno.se | Designed by <strong>Numero Uno</strong> 
-                </div>
-                </div>
+          </section>
+        </div>
+        <div class="notice">
+          &copy; numerouno.se | Designed by <strong>Numero Uno</strong>
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
