--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <ul id="nav-bar">
           <li class="active"><a href="index.html">HEM</a></li>
           <li><a href="omoss.html">OM OSS</a></li>
-          <li style="float: right">
+          <li class="cart" style="float: right">
             <a href="cart.html">
               <i class="fas fa-shopping-basket"></i> VARUKORG <span>( 0 )</span>
             </a>
