--- a/cart.html
+++ b/cart.html
@@ -9,7 +9,6 @@
    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
-    <script src="main.js" defer></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -29,6 +28,20 @@
             </ul>
         </nav>
     </header>
+
+    <div class="products-container">
+        <div class="product-header">
+            <h5 class="product-title">Vara</h5>
+            <h5 class="price">Pris</h5>
+            <h5 class="quantity">Antal</h5>
+            <h5 class="total">Totalsumma</h5>
+        </div>
+        <div class="products">
+
+        </div>
+    </div>
+
+    <script src="main.js"></script>
 
 </body>
 </html>
