la till footer på cart /Kamie

--- a/cart.html
+++ b/cart.html
@@ -41,6 +41,48 @@
         </div>
     </div>
 
+    <!-- start footer -->
+    <footer>
+        <div class="design">
+          <div class="content">
+            <section>
+              <h2 class="footer-h2">Företag</h2>
+              <a href="#">Hem</a>
+              <a href="#">Om oss</a>
+              <a href="#">Kontakt</a>
+              <a href="#">Produkter</a>
+            </section>
+            <section>
+              <h2 class="footer-h2">Populära Produkter</h2>
+              <a href="#">Julgran</a>
+              <a href="#">Julstjärna</a>
+              <a href="#">Julkrans</a>
+              <a href="#">Juldekoration</a>
+            </section>
+            <section class="nyhetsbrev">
+              <h2 class="footer-h2">Nyhetsbrev och Rabatter</h2>
+              <form action="">
+                <input
+                  id="email"
+                  type="email"
+                  placeholder="emailadress@se"
+                  id=""
+                />
+                <input class="medlem" type="submit" value="Prenumerera" />
+              </form>
+              <div class="social">
+                <i class="fab fa-facebook-square"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-youtube"></i>
+                <i class="fab fa-twitter"></i>
+              </div>
+            </section>
+          </div>
+          <div class="notice">
+            &copy; numerouno.se | Designed by <strong>Numero Uno</strong>
+          </div>
+        </div>
+      </footer>
     <script src="main.js"></script>
 
 </body>
