--- a/index.html
+++ b/index.html
@@ -136,25 +136,26 @@
     </section>
     <main />
 
+    <!-- start footer -->
     <footer>
       <div class="design">
         <div class="content">
           <section>
-            <header>Företag</header>
+            <h2 class="footer-h2">Företag</h2>
             <a href="#">Hem</a>
             <a href="#">Om oss</a>
             <a href="#">Kontakt</a>
             <a href="#">Produkter</a>
           </section>
           <section>
-            <header>Populära Produkter</header>
+            <h2 class="footer-h2">Populära Produkter</h2>
             <a href="#">Julgran</a>
             <a href="#">Julstjärna</a>
             <a href="#">Julkrans</a>
             <a href="#">Juldekoration</a>
           </section>
           <section class="nyhetsbrev">
-            <header>Nyhetsbrev och Rabatter</header>
+            <h2 class="footer-h2">Nyhetsbrev och Rabatter</h2>
             <form action="">
               <input
                 id="email"
