Creating loggain.html and login.js file for user login

--- a/index.html
+++ b/index.html
@@ -40,7 +40,20 @@
         </ul>
       </nav>
     </header>
-
+    <button
+      style="
+        max-width: 10vw;
+        padding: 5px;
+        text-align: center;
+        border: none;
+        background-color: green;
+      "
+    >
+      <a href="loggain.html" style="text-decoration: none">
+        Logga In
+        <img src="./Bilder/login.svg" style="height: 10vh" />
+      </a>
+    </button>
     <!-- Här Börjar Card -->
     <!-- Card 1 -->
     <section class="card">
