Log in button styled

--- a/index.html
+++ b/index.html
@@ -37,23 +37,16 @@
               <i class="fas fa-shopping-basket"></i> VARUKORG <span>( 0 )</span>
             </a>
           </li>
+          <li></li>
         </ul>
       </nav>
+      <button class="loggain">
+        <a href="loggain.html">
+          <span>Logga In</span><i class="fas fa-user-plus"></i>
+        </a>
+      </button>
     </header>
-    <button
-      style="
-        max-width: 10vw;
-        padding: 5px;
-        text-align: center;
-        border: none;
-        background-color: green;
-      "
-    >
-      <a href="loggain.html" style="text-decoration: none">
-        Logga In
-        <img src="./Bilder/login.svg" style="height: 10vh" />
-      </a>
-    </button>
+
     <!-- Här Börjar Card -->
     <!-- Card 1 -->
     <section class="card">
