la till logga in i navbar

--- a/index.html
+++ b/index.html
@@ -32,19 +32,20 @@
         <ul id="nav-bar">
           <li class="active"><a href="index.html">HEM</a></li>
           <li><a href="omoss.html">OM OSS</a></li>
-          <li class="cart" style="float: right">
-            <a href="cart.html">
+          <li class="cart"> <a href="cart.html">
               <i class="fas fa-shopping-basket"></i> VARUKORG <span>( 0 )</span>
-            </a>
-          </li>
-          <li></li>
+            </a> </li>
+            
         </ul>
+
+        <li class="loggain2"><a href="loggain.html">LOGGA IN</a>
+
       </nav>
-      <button class="loggain">
+      <!-- <button class="loggain">
         <a href="loggain.html">
           <span>Logga In</span><i class="fas fa-user-plus"></i>
         </a>
-      </button>
+      </button> -->
     </header>
 
     <!-- Här Börjar Card -->
