ökade avståndet mellan navbar och main

--- a/omoss.html
+++ b/omoss.html
@@ -48,7 +48,7 @@
 
 <section class="kontaktformular-container">
     <article class="Kontakta Oss">
-        <div class="gruppett">
+        <div class="formular">
             <h2 class="title"> Kontakta Oss</h2>
 
                 <span class="brodtext"></span>
