--- a/cart.html
+++ b/cart.html
@@ -18,7 +18,7 @@
             <h1>Varukorg</h1>
             <ul id="nav-bar">
                 <li> <a href="index.html">HEM</a></li>
-                <li> <a href="omoss.html">OM OSS</a></li>
+                <li> <a href="omoss.html">KONTAKT</a></li>
                 <li style="float:right">
                     <a href="cart.html" class="active"> 
                     <i class="fas fa-shopping-basket"></i> VARUKORG  <span>( 0 )</span>
