--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <ul id="nav-bar">
           <li class="active"><a href="index.html">HEM</a></li>
           <li><a href="omoss.html">OM OSS</a></li>
+          <li> <a href="kontakt.html">KONTAKT</a></li>
           <li class="cart" style="float: right">
             <a href="cart.html">
               <i class="fas fa-shopping-basket"></i> VARUKORG <span>( 0 )</span>
@@ -140,21 +141,21 @@
     <footer>
       <div class="design">
         <div class="content">
-          <section>
+          <section class="section">
             <h2 class="footer-h2">Företag</h2>
             <a href="#">Hem</a>
             <a href="#">Om oss</a>
-            <a href="#">Kontakt</a>
+            <a href="kontakt.html">Kontakt</a> 
             <a href="#">Produkter</a>
           </section>
-          <section>
+          <section class="section">
             <h2 class="footer-h2">Populära Produkter</h2>
             <a href="#">Julgran</a>
             <a href="#">Julstjärna</a>
             <a href="#">Julkrans</a>
             <a href="#">Juldekoration</a>
           </section>
-          <section class="nyhetsbrev">
+          <section class="section nyhetsbrev">
             <h2 class="footer-h2">Nyhetsbrev och Rabatter</h2>
             <form action="">
               <input
