--- a/omoss.html
+++ b/omoss.html
@@ -47,9 +47,9 @@
 </section>
 
 <section class="kontaktformular-container">
-    <article class="Kontakta Oss">
+    <article class="Om Oss">
         <div class="formular">
-            <h2 class="title"> Kontakta Oss</h2>
+            <h2 class="title"> Om Oss</h2>
 
                 <span class="brodtext"></span>
         </div>
