--- a/index.html
+++ b/index.html
@@ -70,6 +70,22 @@
       />
       <button type="submit" onclick="checkFunction()">Login</button>
     </div>
+
+    <div id="card-update-div" class="card-update-div" style="width: auto">
+      <h2>Administraion Card edit page</h2>
+      <fieldset>
+        <legend>Insert Card info</legend>
+        <input id="cardKey" type="text" placeholder="Enter title...." />
+        <input id="cardInput" type="text" placeholder="Enter Value...." />
+        <button type="button" id="btnInsert">Insert Data</button>
+      </fieldset>
+      <fieldset>
+        <label> You entered </label>
+        <div class="cardOutput"></div>
+      </fieldset>
+      </div>
+
+
     <!-- Här Börjar Card -->
     <!-- Card 1 -->
     <section class="card">
