--- a/kontakt.html
+++ b/kontakt.html
@@ -18,9 +18,9 @@
       <nav>
         <h1>Julpynt.se</h1>
         <ul id="nav-bar">
-          <li class="active"><a href="index.html">HEM</a></li>
+          <li><a href="index.html">HEM</a></li>
           <li> <a href="omoss.html">OM OSS</a></li>
-          <li> <a href="kontakt.html">KONTAKT</a></li>
+          <li class="active"> <a href="kontakt.html">KONTAKT</a></li>
           <li class="cart" style="float: right">
             <a href="cart.html">
               <i class="fas fa-shopping-basket"></i> VARUKORG <span>( 0 )</span>
