--- a/omoss.html
+++ b/omoss.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontakta Oss</title>
+    <title>OM Oss</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
    
@@ -18,10 +18,11 @@
     <!-- Här börjar header -->
 <header>
     <nav>
-        <h1>Kontakta Oss</h1>
+        <h1>Om Oss</h1>
         <ul id="nav-bar">
             <li> <a href="index.html">HEM</a></li>
-            <li class="active"> <a href="omoss.html">KONTAKT</a></li>
+            <li class="active"> <a href="omoss.html">OM OSS</a></li>
+            <li> <a href="kontakt.html">KONTAKT</a></li>
             <li style="float:right">
                 <a href="cart.html"> 
                 <i class="fas fa-shopping-basket"></i> VARUKORG  <span>( 0 )</span>
