--- a/kontakt.html
+++ b/kontakt.html
@@ -16,7 +16,7 @@
 
     <header>
       <nav>
-        <h1>Julpynt.se</h1>
+        <h1>Kontakta Oss</h1>
         <ul id="nav-bar">
           <li><a href="index.html">HEM</a></li>
           <li> <a href="omoss.html">OM OSS</a></li>
