--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <header>
       <nav>
         <h1>Julpynt.se</h1>
+
         <ul id="nav-bar">
           <li class="active"><a href="index.html">HEM</a></li>
           <li> <a href="omoss.html">OM OSS</a></li>
@@ -40,9 +41,7 @@
             </a> </li>
             
         </ul>
-
-        <button class="loggain"
-        type="button"
+        <button class="loggain" type="button"
         onclick="document.getElementById('loginDiv').style.display='block'">
             <i class="fas fa-user-plus"></i><span> LOGGA IN </span>
         </button>
