--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div>
           <img
             class="card-img"
-            src="Bilder/julkrans.jpg"
+            src="Bilder/julkrans2.jpg"
             alt="bild på julig julkrans"
           />
         </div>
