ändrade beskrivning i julstjärna

--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
         </div>
         <div>
           <p class="card-p">
-            En fantastisk vacker julstärna. Hängande pappstjärna i grå/vitt
-            mönster. Stor modell med en diameter på 75cm.
+            En fantastisk vacker julstärna. Att pryda toppen av julgranen med, finns i guld, silver och vitt. ca 25 cm.
           </p>
         </div>
         <div>
