--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
         <div><h2 class="title">Julgran</h2></div>
         <div>
           <p class="card-p">
-            Granen är ett måste inom juldekoration! Den är en av de mest kända
-            och populära träds-sorterna. Välj mellan olika storlekar och pynta
+            Granen är ett måste inom juldekoration! Välj mellan olika storlekar och pynta
             sedan efter egen smak!
           </p>
         </div>
