Adding administration creating card page

--- a/loggain.html
+++ b/loggain.html
@@ -35,6 +35,10 @@
       <button type="submit" onclick="checkFunction()">Login</button>
     </div>
     <br />
-    <div id="card-info"></div>
+    <div id="card-info">
+      <button type="button" class="creating-card" id="creating-card">
+        <a href="cardLocalStorage.html">Cerating Cards</a>
+      </button>
+    </div>
   </body>
 </html>
