--- a/index.html
+++ b/index.html
@@ -42,47 +42,16 @@
           </ul>
 
               <button class="loggain" type="button"
-              onclick="document.getElementById('loginDiv').style.display='block'">
+              onclick="document.getElementById('loginDiv').style.display='block'"><a href="loggain.html" style="text-decoration: none">
                   <i class="fas fa-user-plus"></i><span> LOGGA IN </span>
+                </a>
               </button>
       </nav>
 
 
     </header>
     <!-- Admin login section-->
-    <div id="loginDiv" class="loginDiv">
-      <label for="uname"><b>Username</b></label>
-      <input
-        type="text"
-        placeholder="Enter Username"
-        name="uname"
-        id="username"
-        required
-      />
-      <label for="password"><b>Password</b></label>
-      <input
-        type="password"
-        placeholder="Enter Password"
-        name="password"
-        id="password"
-        required
-      />
-      <button type="submit" onclick="checkFunction()">Login</button>
-    </div>
-
-    <div id="card-update-div" class="card-update-div" style="width: auto">
-      <h2>Administraion Card edit page</h2>
-      <fieldset>
-        <legend>Insert Card info</legend>
-        <input id="cardKey" type="text" placeholder="Enter title...." />
-        <input id="cardInput" type="text" placeholder="Enter Value...." />
-        <button type="button" id="btnInsert">Insert Data</button>
-      </fieldset>
-      <fieldset>
-        <label> You entered </label>
-        <div class="cardOutput"></div>
-      </fieldset>
-      </div>
+    
 
 
     <!-- Här Börjar Card -->
