--- a/omoss.html
+++ b/omoss.html
@@ -36,7 +36,7 @@
 
 <section class="omoss-container">
     <article class="omoss">
-        <img class="bild" src="./Bilder/julgran.jpg" alt="Julgran bild">
+        <img class="bild" src="./Bilder/julgran2.jpg" alt="Julgran bild">
         <div class="gruppett">
             <h2 class="title"> Om Oss </h2>
 
@@ -46,6 +46,54 @@
     
         </article>
 </section>
+
+
+<footer>
+    <div class="design">
+      <div class="content">
+
+        <section class="section">
+          <h2 class="footer-h2">Företag</h2>
+          <a href="index.html">Hem</a>
+          <a href="omoss.html">Om oss</a>
+          <a href="kontakt.html">Kontakt</a> 
+          <a href="index.html">Produkter</a>
+        </section>
+
+        <section class="section-popular">
+          <h2 class="footer-h2">Populära Produkter</h2>
+          <a href="#">Julgran</a>
+          <a href="#">Julstjärna</a>
+          <a href="#">Julkrans</a>
+          <a href="#">Juldekoration</a>
+        </section>
+
+        <section class="section-nyhetsbrev">
+          <h2 class="footer-h2">Nyhetsbrev och Rabatter</h2>
+          <form action="">
+            <input
+              id="email"
+              type="email"
+              placeholder="emailadress@se"
+              id=""
+            />
+            <input id="medlem" type="submit" value="Prenumerera" />
+          </form>
+          <div class="social">
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-twitter"></i>
+          </div>
+        </section>
+
+      </div>
+
+      <div class="notice">
+        &copy; numerouno.se | Designed by <strong>Numero Uno</strong>
+      </div>
+    </div>
+  </footer>
 
 </body>
 </html>
