--- a/kontakt.html
+++ b/kontakt.html
@@ -77,47 +77,52 @@
       </section>
 
       <!-- start footer -->
-    <footer>
-      <div class="design">
-        <div class="content">
-          <section class="section">
-            <h2 class="footer-h2">Företag</h2>
-            <a href="#">Hem</a>
-            <a href="#">Om oss</a>
-            <a href="kontakt.html">Kontakt</a> 
-            <a href="#">Produkter</a>
-          </section>
-          <section class="section">
-            <h2 class="footer-h2">Populära Produkter</h2>
-            <a href="#">Julgran</a>
-            <a href="#">Julstjärna</a>
-            <a href="#">Julkrans</a>
-            <a href="#">Juldekoration</a>
-          </section>
-          <section class="section nyhetsbrev">
-            <h2 class="footer-h2">Nyhetsbrev och Rabatter</h2>
-            <form action="">
-              <input
-                id="email"
-                type="email"
-                placeholder="emailadress@se"
-                id=""
-              />
-              <input id="medlem" type="submit" value="Prenumerera" />
-            </form>
-            <div class="social">
-              <i class="fab fa-facebook-square"></i>
-              <i class="fab fa-instagram"></i>
-              <i class="fab fa-youtube"></i>
-              <i class="fab fa-twitter"></i>
-            </div>
-          </section>
+      <footer>
+        <div class="design">
+          <div class="content">
+  
+            <section class="section">
+              <h2 class="footer-h2">Företag</h2>
+              <a href="index.html">Hem</a>
+              <a href="omoss.html">Om oss</a>
+              <a href="kontakt.html">Kontakt</a> 
+              <a href="index.html">Produkter</a>
+            </section>
+  
+            <section class="section-popular">
+              <h2 class="footer-h2">Populära Produkter</h2>
+              <a href="#">Julgran</a>
+              <a href="#">Julstjärna</a>
+              <a href="#">Julkrans</a>
+              <a href="#">Juldekoration</a>
+            </section>
+  
+            <section class="section-nyhetsbrev">
+              <h2 class="footer-h2">Nyhetsbrev och Rabatter</h2>
+              <form action="">
+                <input
+                  id="email"
+                  type="email"
+                  placeholder="emailadress@se"
+                  id=""
+                />
+                <input id="medlem" type="submit" value="Prenumerera" />
+              </form>
+              <div class="social">
+                <i class="fab fa-facebook-square"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-youtube"></i>
+                <i class="fab fa-twitter"></i>
+              </div>
+            </section>
+  
+          </div>
+  
+          <div class="notice">
+            &copy; numerouno.se | Designed by <strong>Numero Uno</strong>
+          </div>
         </div>
-        <div class="notice">
-          &copy; numerouno.se | Designed by <strong>Numero Uno</strong>
-        </div>
-      </div>
-    </footer>
+      </footer>
 
       <!-- <script src="https://smtpjs.com/v3/smtp.js"></script> -->
       
