la till produkttitel i main

--- a/index.html
+++ b/index.html
@@ -84,10 +84,13 @@
       </fieldset>
       </div>
 
+      <div class="main-header-container"><span class="main-header">Produkter</span><hr></div>
 
     <!-- Här Börjar Card -->
+    
     <!-- Card 1 -->
     <section class="card">
+      </div>
       <article class="container-item" id="item1">
         <div>
           <img class="card-img" src="./Bilder/julgran2.jpg" alt="Julgrans bild" />
