Updaterade styling på bägge logga in knapparna

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
               </a> </li>
           </ul>
 
-              <button class="loggain" type="button"
+          <a href="loggain.html"><button class="loggain" type="button"
               onclick="document.getElementById('loginDiv').style.display='block'">
-                  <i class="fas fa-user-plus"></i><a href="loggain.html"><span> LOGGA IN </span></a>
+                  <i class="fas fa-user-plus"></i><span> ADMIN </span></a>
               </button>
       </nav>
 
