--- a/loggain.html
+++ b/loggain.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hem</title>
+    <title>Admin login</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
@@ -34,9 +34,9 @@
       class="login-btn"
       type="button"
       onclick="document.getElementById('loginDiv').style.display='block'"
-      style="width: 100px; margin-bottom: 5px"
+      style="width: 260px; margin-bottom: 5px"
     >
-      Log in
+      Press to start the log in
     </button>
 
     <div id="loginDiv" class="loginDiv">
@@ -61,7 +61,7 @@
     <br />
     <div id="card-info">
       <button type="button" class="creating-card" id="creating-card">
-        <a href="cardLocalStorage.html">Cerating Cards</a>
+        <a href="cardLocalStorage.html">Press to create cards</a>
       </button>
     </div>
 
